--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cypress": "^1.1.3",
     "cypress": "^13.13.0",
     "typescript": "^5.5.3"
   }
