--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@types/cypress": "^1.1.3",
     "cypress": "^13.13.0",
     "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "ajv": "^8.17.1"
   }
 }
