--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@cypress/grep": "^4.1.0",
     "@shelex/cypress-allure-plugin": "^2.40.2",
     "@types/cypress": "^1.1.3",
+    "allure-commandline": "^2.29.0",
+    "allure-cypress": "^2.15.1",
     "cypress": "^13.13.0",
     "typescript": "^5.5.3"
   },
