--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
-    "ajv": "^8.17.1"
+    "@types/nodemailer": "^6.4.15",
+    "ajv": "^8.17.1",
+    "dotenv": "^16.4.5",
+    "nodemailer": "^6.9.14",
+    "winston": "^3.13.1"
   }
 }
