--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,6 +25,6 @@ jobs:
         run: npx cypress install
 
       - name: Run Cypress tests
-        run: npx cypress run
+        run: npx cypress run --spec 'cypress/e2e/2-apiTesting'
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
