--- a/.github/workflows/cypresstest.yaml
+++ b/.github/workflows/cypresstest.yaml
@@ -1,6 +1,10 @@
 name: Cypress Tests
 
-on:     
+on:  
+  push:
+    branches:
+      - main
+      
   schedule:
     - cron: '10 * * * *'  # This will run the workflow every day at 11:45 AM Thailand time (UTC+7)
 
