--- a/.github/workflows/cypresstest.yaml
+++ b/.github/workflows/cypresstest.yaml
@@ -2,7 +2,7 @@ name: Cypress Tests
 
 on:  
   schedule:
-    - cron: '10 * * * *'  # This will run the workflow every day at 11:45 AM Thailand time (UTC+7)
+    - cron: '*/5 * * * *'  # This will run the workflow every day at 11:45 AM Thailand time (UTC+7)
 
 jobs: 
   cypress-run: 
