--- a/.github/workflows/cypresstest.yaml
+++ b/.github/workflows/cypresstest.yaml
@@ -1,8 +1,12 @@
 name: Cypress Tests
 
 on:  
-  schedule:
-    - cron: '*/5 * * * *'  # This will run the workflow every day at 11:45 AM Thailand time (UTC+7)
+  push:
+    branches:
+      - main
+      
+  # schedule:
+  #   - cron: '*/5 * * * *'  # This will run the workflow every day at 11:45 AM Thailand time (UTC+7)
 
 jobs: 
   cypress-run: 
