--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
         }
         stage('Test') {
             steps {
-                echo "Test"
+                echo "End-To-End Test"
                 //
             }
         }
