update report send email

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
                 catchError(buildResult: 'SUCCESS', stageResult: 'FAILURE') {
                     sh """
                     source ~/.zshrc
-                    npm run cypress:run
+                    npx cypress run --spec 'cypress/e2e/2-apiTesting/HeadersAndCookies.cy.ts' > results/full_results.txt && grep -A 15 'Run Finished' results/full_results.txt > results/results.txt
                     """      
                 }
             }
